header margin and font

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
   <title>Document</title>
 </head>
 <body>
-<header>Calculator – CSS Grid &amp; ES6</header>
+<header>
+  <h1>Calculator – CSS Grid &amp; ES6</h1>
+</header>
 <div class="container">
   <div class="display">
     <input type="text" name="display" id="textarea">
