--- a/index.html
+++ b/index.html
@@ -1,40 +1,42 @@
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="style.css">
-  <title>Document</title>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="style.css">
+    
+    <title>Calculator</title>
 </head>
 <body>
 <header>
   <h1>Calculator – CSS Grid &amp; ES6</h1>
 </header>
-<div class="container">
+<div class="calculator">
   <div class="display">
     <input type="text" name="display" id="textarea">
   </div>
   <div class="keypad">
-    <input type="button" class="key operator" value="%" data-action="percent">
-    <input type="button" class="key operator" value="√" data-action="sqroot">
-    <input type="button" class="key operator" value="÷" data-action="divide">
-    <input type="button" class="key clear"   value="CL" data-action="clear" >
-    <input type="button" class="key number"   value="7">
-    <input type="button" class="key number"   value="8">
-    <input type="button" class="key number"   value="9">
-    <input type="button" class="key operator" value="×" data-action="multiply">
-    <input type="button" class="key number"   value="4">
-    <input type="button" class="key number"   value="5">
-    <input type="button" class="key number"   value="6">
-    <input type="button" class="key operator" value="−" data-action="subtract">
-    <input type="button" class="key number"   value="1">
-    <input type="button" class="key number"   value="2">
-    <input type="button" class="key number"   value="3">
-    <input type="button" class="key number" value="0">
-    <input type="button" class="key number" value=".">
-    <input type="button" class="key equal"  value="=" data-action="calculate">
-    <input type="button" class="key operator" value="+" data-action="add">
+    <input type="button" class="key operator" value="%" data-key=""   data-action="percent" >
+    <input type="button" class="key operator" value="√" data-key=""   data-action="sqroot">
+    <input type="button" class="key operator" value="÷" data-key=""   data-action="divide">
+    <input type="button" class="key clear"    value="CL"              data-action="clear" >
+    <input type="button" class="key number"   value="7" data-key="56">
+    <input type="button" class="key number"   value="8" data-key="57">
+    <input type="button" class="key number"   value="9" data-key="58">
+    <input type="button" class="key operator" value="×" data-key=""   data-action="multiply">
+    <input type="button" class="key number"   value="4" data-key="53">
+    <input type="button" class="key number"   value="5" data-key="54">
+    <input type="button" class="key number"   value="6" data-key="55">
+    <input type="button" class="key operator" value="−" data-key="173"data-action="subtract">
+    <input type="button" class="key number"   value="1" data-key="49">
+    <input type="button" class="key number"   value="2" data-key="50">
+    <input type="button" class="key number"   value="3" data-key="51">
+    <input type="button" class="key number"   value="0" data-key="48">
+    <input type="button" class="key number"   value="." data-key="190"data-action="decimal">
+    <input type="button" class="key equal"    value="=" data-key="61" data-action="calculate">
+    <input type="button" class="key operator" value="+" data-key="43" data-action="add">
   </div>
 </div>
 </body>
+<script src="calc.js"></script>
 </html>
